<resources>
    <string name="app_name">Samples</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_coffee">Coffee</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_commute">Commute</string>
    <string name="station_dialog">Station Dialog</string>
    <string name="station_id">station_id</string>
    <string name="menu_map">Maps</string>
    <string name="menu_news">News</string>
    <!-- Preference Titles -->
    <string name="news_header">News</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_summary">Frequency in seconds that news is received</string>
    <string name="breaking_news_push_notifications_summary">Allow the app to display push notifications for selected news types</string>
    <string name="breaking_news_in_app_notifications_summary">Allow the app to display in-app notifications for selected news types</string>
    <string name="news_lasertag_body">FRAMINGHAM, MA—Reeling with surprise as the 45-year-old dove behind cover and shouted out commands to his teammates, guests at local child Chase Williamson’s laser tag birthday party confirmed Thursday that they were not prepared for how hard his dad, Larry, was going to bring it.</string>
    <string name="news_lasertag_title">No One At Laser Tag Prepared For How Hard Dad Was Going To Bring It</string>
    <string name="news_disney_fandom_title">DSM-5 Finally Stops Classifying Adult Disney Fandom As Form Of Psychopathy</string>
    <string name="news_disney_fandom_body">ARLINGTON, VA—In a long-overdue move to help modernize clinical practices, the American Psychological Association announced Thursday plans to update their Diagnostic And Statistical Manual Of Mental Disorders, Fifth Edition to stop classifying adult Disney fandom as a form of psychopathy.</string>
    <string name="news_parents_disbelief_title">Parents Can’t Believe How Bad Daughter Is At Being Raised By Them</string>
    <string name="news_parents_disbelief_body">CALDWELL, ID—Frustrated by her complete lack of initiative in developing their relationship, the parents of local teenager Sophia Miller, 14, expressed bewilderment Wednesday at how bad their daughter was at being raised by them. “It’s frustrating, we care, but she just isn’t putting any effort into being loved by us at all,” said father Russel, who claimed that Sophia has neglected her duties to instill a strong work ethic in herself and encourage herself to pursue enriching hobbies.</string>
    <string name="news_biden_childcare_title">Biden’s Child-Care Plan To Allow All American Parents To Drop Kids Off At White House Between 8 And 5</string>
    <string name="news_biden_childcare_body">WASHINGTON—In an effort to help cover costs for working families, President Joe Biden rolled out his child-care plan Wednesday allowing all American parents to drop their kids off at the White House between 8 a.m. and 5 p.m. “Starting today, you can drop your tykes right off at the front gate, where a senior adviser will check your child in and escort them to the West Wing,” said Biden, who touted the new program as a convenient centralized location for families from the Mid-Atlantic, Southeastern, and Midwest regions, as well as only a short drive away for those living in the West and Southwest.</string>
    <string name="news_woman_disbelief_title">Woman Suddenly Realizes She Same Age Parents Were When They Were Her Age</string>
    <string name="news_woman_disbelief_body">ATLANTA—Noting the event had caused her to rethink the chronology of her entire life, local woman Jessica Landis told reporters Tuesday that she suddenly realized she was the same age her parents were when they were her age. “It’s just crazy, I’m turning 27 next month, which is the same exact point in my parents’ lives when they were also 27,” said Landis, adding that while she didn’t feel particularly old, at that phase in their lives, her mother and father had already lived over two and a half decades.</string>
    <string name="news_missing_tiger_title">Houston Authorities Scramble As Missing Tiger Disappears Into Crowd Of Tigers</string>
    <string name="news_missing_tiger_body">HOUSTON, TX—Warning that the escaped animal was highly intelligent and a master of deceit, Houston authorities scrambled Friday when a missing tiger named India disappeared into a crowd of tigers. “After four days straight of searching for a loose bengal tiger, our search efforts hit a snag today when he cut across a cul de sac, hid behind a car, and ultimately slipped into a pack of over 100 tigers,”</string>
    <string name="channel_name">App Channel</string>
    <string name="channel_description">Channel for Demo App</string>
    <string name="menu_hue_parent">Mock Hue Controller</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_connection">Venue</string>
    <string name="camera_mode_title">Pick Camera Mode</string>
    <string name="capture_disabled">Capture disabled in this mode</string>
</resources>