<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_coffee"
            android:icon="@drawable/ic_coffee_maker"
            android:title="@string/menu_coffee" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_article"
            android:title="@string/menu_news"/>
        <item
            android:id="@+id/parentFragment"
            android:icon="@drawable/ic_light"
            android:title="@string/menu_hue_parent" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_celebration"
            android:title="@string/menu_goals" />
    </group>
</menu>